# template-project

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  MODERNIZATION_PLAN.md  README.md  actions_overview.html  build_docs.html  citation.html  citation_guide.html  code_style.html  contributing.html  customisation_checklist.html  customisation_checklist.md  demo-output.html  demo-output.ipynb  demo-output2.html  demo-output2.ipynb  environment.yml  faq.html  genindex.html  gitcollab.html  gitcollab_v2.html  github.html  github_intro.html  github_tags_guide.html  gitorg.html  gitorg_transfer.html  gitworkflow_solo.html  index.html  installation.html  objects.inv  precommit_guide.html  precommit_setup.html  projectName.html  project_structure.html  py-modindex.html  pypi-publish.html  (+11 more)
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  scientific_accuracy.yml
.github/workflows/: docs.yml  docs_deploy.yml  pypi.yml  tests.yml
_modules/: index.html
_modules/projectName/: plotters.html  tools.html  writers.html
_modules/template_project/: plotters.html  readers.html  tools.html  utilities.html  writers.html
_sources/: demo-output.ipynb.txt  demo-output2.ipynb.txt  gitcollab.md.txt  github.md.txt  index.rst.txt  project_structure.md.txt  pypi-publish.md.txt
changelog.d/: README.md  _template.md
docs/source/: citation.md  code_style.md  conf.py  contributing.md  faq.md  gitcollab.md  gitcollab_v2.md  gitorg.md  gitworkflow_solo.md  index.rst  index_v1.rst  installation.md  precommit_setup.md  projectName.rst  project_structure.md  pypi-publish.md  setup.md  writing_tests.md
notebooks/: demo-output.ipynb  demo.ipynb
template_project/: __init__.py  _version.py  logger.py  plotters.py  read_rapid.py  readers.py  tools.py  utilities.py  writers.py
tests/: test_logger.py  test_plotters.py  test_readers.py  test_tools.py  test_utilities.py  test_writers.py
